[package]
name = "mdview"
version = "0.1.0"
edition = "2024"
description = "A lightweight, CLI-first markdown viewer for Linux"

[dependencies]
gtk4 = "0.9"
webkit6 = "0.4"
comrak = { version = "0.36", default-features = false, features = ["syntect"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
clap = { version = "4", features = ["derive"] }
